--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
-
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.13
+# Done to increase the memory available to gradle.
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.17.2
 
 # Mod Properties
 mod_version=0.6.7
@@ -13,4 +13,4 @@ maven_group=xyz.nucleoid
 archives_base_name=fantasy
 
 # Dependencies
-fabric_version=0.119.2+1.21.5
+fabric_version=0.133.4+1.21.8
